add all game objects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <script type="text/javascript" src='js/game.js'></script>
   <script type="text/javascript" src='js/rush-common-shapes.js'></script>
   <script type="text/javascript" src='js/rush-gameobject.js'></script>
+  <script type="text/javascript" src='js/rush-movable-gameobject.js'></script>
   <script type="text/javascript" src='js/rush-platform.js'></script>
+  <script type="text/javascript" src='js/rush-hero.js'></script>
+  <script type="text/javascript" src='js/rush-obstacle.js'></script>
+  <script type="text/javascript" src='js/rush-coin.js'></script>
   <script type="text/javascript" src='js/rush-game.js'></script>
 
 </body>
