--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 <body>
   <div id='game'>
     <canvas id='game-canvas' width='480' height='320'></canvas>
+    <div id='score'></div>
+    <div id='menu' class='scene hidden'>
+      <a id='start-btn' href='#'></a>
+    </div>
+    <div id='gameover' class='scene hidden'>
+      <div id='your-game-score'>Your Score is 100</div>
+      <div id='top-scores'></div>
+      <a id='restart-btn' href='#'></a>
+   </div>
   </div>
 
   <script type="text/javascript" src='vendors/easeljs-0.8.0.min.js'></script>
   <script type="text/javascript" src='js/game.js'></script>
+  <script type="text/javascript" src='js/rush-preloader.js'></script>
   <script type="text/javascript" src='js/rush-common-shapes.js'></script>
   <script type="text/javascript" src='js/rush-gameobject.js'></script>
   <script type="text/javascript" src='js/rush-movable-gameobject.js'></script>
@@ -19,6 +29,7 @@
   <script type="text/javascript" src='js/rush-hero.js'></script>
   <script type="text/javascript" src='js/rush-obstacle.js'></script>
   <script type="text/javascript" src='js/rush-coin.js'></script>
+  <script type="text/javascript" src='js/rush-top-scores.js'></script>
   <script type="text/javascript" src='js/rush-game.js'></script>
 
 </body>
